--- a/StockAnalysis/Analysis/AnaysisSearchViewController.xib
+++ b/StockAnalysis/Analysis/AnaysisSearchViewController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnaysisSearchViewController">
             <connections>
+                <outlet property="historyView" destination="fT8-Zx-dJr" id="Etb-90-Wd2"/>
+                <outlet property="histroyList" destination="OaO-tB-Mgr" id="GQN-j3-DrG"/>
                 <outlet property="searchBar" destination="dpT-Gv-8xt" id="aPa-eP-bbi"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -21,13 +23,58 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dpT-Gv-8xt">
+                <searchBar contentMode="redraw" barStyle="blackTranslucent" placeholder="搜索" translatesAutoresizingMaskIntoConstraints="NO" id="dpT-Gv-8xt">
                     <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="56" id="PdM-G3-nxB"/>
+                    </constraints>
                     <textInputTraits key="textInputTraits"/>
                 </searchBar>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fT8-Zx-dJr">
+                    <rect key="frame" x="0.0" y="34" width="375" height="633"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="历史记录" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="awD-a1-I1B">
+                            <rect key="frame" x="16" y="13" width="66" height="20"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OaO-tB-Mgr">
+                            <rect key="frame" x="0.0" y="44" width="375" height="589"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </tableView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEp-NH-Ji8">
+                            <rect key="frame" x="273" y="8" width="86" height="29"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" title="清除历史记录"/>
+                            <connections>
+                                <action selector="clickClearHistroy:" destination="-1" eventType="touchUpInside" id="jzL-iB-kFX"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="awD-a1-I1B" firstAttribute="leading" secondItem="fT8-Zx-dJr" secondAttribute="leading" constant="16" id="0UL-y2-gJk"/>
+                        <constraint firstItem="QEp-NH-Ji8" firstAttribute="top" secondItem="fT8-Zx-dJr" secondAttribute="top" constant="8" id="6B9-YI-4x2"/>
+                        <constraint firstAttribute="bottom" secondItem="OaO-tB-Mgr" secondAttribute="bottom" id="8Ym-2f-Flv"/>
+                        <constraint firstItem="awD-a1-I1B" firstAttribute="top" secondItem="fT8-Zx-dJr" secondAttribute="top" constant="13" id="BK5-TQ-OoB"/>
+                        <constraint firstAttribute="trailing" secondItem="OaO-tB-Mgr" secondAttribute="trailing" id="Qj6-m6-T6A"/>
+                        <constraint firstAttribute="trailing" secondItem="QEp-NH-Ji8" secondAttribute="trailing" constant="16" id="Zka-hT-UdX"/>
+                        <constraint firstItem="OaO-tB-Mgr" firstAttribute="leading" secondItem="fT8-Zx-dJr" secondAttribute="leading" id="cr4-id-km9"/>
+                        <constraint firstItem="OaO-tB-Mgr" firstAttribute="top" secondItem="fT8-Zx-dJr" secondAttribute="top" constant="44" id="eHK-ke-e3e"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="fT8-Zx-dJr" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="3Aw-cp-0K1"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="fT8-Zx-dJr" secondAttribute="bottom" id="Dzw-aK-hP9"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="dpT-Gv-8xt" secondAttribute="trailing" id="Nyg-d6-gC3"/>
+                <constraint firstItem="fT8-Zx-dJr" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="14" id="Zg2-m5-dxF"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="fT8-Zx-dJr" secondAttribute="trailing" id="gtR-z7-iKR"/>
+                <constraint firstItem="dpT-Gv-8xt" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="j5C-fI-Aan"/>
+                <constraint firstItem="dpT-Gv-8xt" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="qA8-ia-did"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="31.5" y="68.5"/>
         </view>
