--- a/StockAnalysis/FirstView/FirstListTableViewCell.xib
+++ b/StockAnalysis/FirstView/FirstListTableViewCell.xib
@@ -19,30 +19,40 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="神州数码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipR-nf-KDS">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="神州数码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipR-nf-KDS">
                         <rect key="frame" x="16" y="11" width="70" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="23.7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQs-ck-2Mc">
-                        <rect key="frame" x="139" y="12" width="34" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23.7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OQs-ck-2Mc">
+                        <rect key="frame" x="143" y="12" width="34" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="1" green="0.1739185265" blue="0.1203272526" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="10%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4S-NP-98J">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C4S-NP-98J">
                         <rect key="frame" x="262" y="11" width="32" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="1" green="0.1739185265" blue="0.1203272526" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="OQs-ck-2Mc" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="1TX-ok-fe7"/>
+                    <constraint firstItem="C4S-NP-98J" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="82S-qw-iLk"/>
+                    <constraint firstItem="ipR-nf-KDS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="IUR-Rt-Rxf"/>
+                    <constraint firstAttribute="trailing" secondItem="C4S-NP-98J" secondAttribute="trailing" constant="26" id="IgT-wm-p5Q"/>
+                    <constraint firstItem="ipR-nf-KDS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dVR-aF-90X"/>
+                    <constraint firstItem="OQs-ck-2Mc" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="pK3-es-qfi"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="nameLabel" destination="ipR-nf-KDS" id="B4M-G4-kNb"/>
+                <outlet property="priceLabel" destination="OQs-ck-2Mc" id="lhT-xd-puK"/>
+                <outlet property="upOrDownRateLabel" destination="C4S-NP-98J" id="OQc-by-oLI"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
